...
            <objects>
                <viewController id="wZb-U4-mhW" customClass="HomeViewController" customModule="greatshop" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Fmh-ae-O08">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2E-XT-CTo">
                                <rect key="frame" x="149" y="83" width="76" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ms4-mV-F4t">
...
            </objects>
            <point key="canvasLocation" x="3215" y="374"/>
        </scene>
        <!--Basket-->
        <scene sceneID="biS-nv-5YB">
            <objects>
                <viewControllerPlaceholder storyboardName="Basket" id="QZu-ln-J8Y" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="aRP-US-THe"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cXi-jv-SJw" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3571" y="585"/>
        </scene>
...
