...
            <objects>
                <tableViewController title="Products" id="0bX-9R-Ljd" customClass="ProductListViewController" customModule="greatshop" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Tqg-FU-Nec">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" id="k0h-dP-aY1">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <textInputTraits key="textInputTraits"/>
                        </searchBar>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductListCell" textLabel="XhY-9o-cmz" detailTextLabel="wkF-xd-9pl" rowHeight="100" style="IBUITableViewCellStyleValue1" id="r1O-Rl-fZf" customClass="ProductCell" customModule="greatshop" customModuleProvider
...
            <point key="canvasLocation" x="2498" y="565"/>
        </scene>
        <!--Product-->
        <scene sceneID="ut0-gS-0JG">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RWN-Pm-98a" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Product" image="shop" id="K5Y-qA-TlV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zMu-co-S6J">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
